# strudel-music

./: .clawhubignore  .gitignore  CHANGELOG.md  LICENSE  README.md  SKILL.md  bank-manifest.json  package-lock.json  package.json  pyproject.toml  slice-summary.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  stale.yml
.specify/: README.md
.specify/workorders/: WO1-strudel-music-v1.md  WO3-discord-vc-pipeline.md
docs/: PROMOTION.md  TESTING.md  testing-checklist.md
references/: composing.md  gain-calibration.md  integration-pipeline.md
samples/: strudel.json
scripts/: analyze-bpm-key.py  clone-pipeline.sh  dispatch.sh  download-samples.sh  extract-bass.py  extract-drums.py  extract-leads.py  null-drop-detect.py  qa-gate.py  render-pattern.sh  repl-capture.mjs  samples-manage.sh  slice-stems.py  stream-to-vc.sh  vc-play.mjs
src/compositions/: administratum-elliott-v2.js  administratum-elliott.js  angel-1-grammar.js  arthas-elliott-study.js  asteroids-elliott-claude.js  between-the-bars-elliott.js  blackbird-elliott-study.js  broken-glass-and-vines-elliott.js  broken-glass-v2-elliott.js  chattanooga-diner-m1-cael.js  chattanooga-diner-mv1-silas.js  chattanooga-diner-mv2-elliott.js  eamon-elliott-v2.js  eamon-elliott.js  fog-goes-quiet-elliott-v3.js  fog-goes-quiet-elliott.js  fog-v3-analysis.md  frisson-elliott-notelevel.js  fusion-silas.js  hallur-elliott.js  inside-the-oubliette-cael.js  long-journey-home-elliott.js  new-track-grammar.js  paper-cranes-elliott.js  pink-moon-ronan.js  please-dont-destroy-yourself.txt  scott-street-ronan.js  (+10 more)
(+5 files in other folders)
