# pyproject.toml — strudel-music Python ML pipeline
#
# This is for the OPTIONAL Python pipeline (Demucs stem separation, librosa
# analysis) — not the core Node.js skill. If you only need composition and
# rendering, you don't need Python at all.
#
# Install with uv:
#   uv sync                  # base deps (demucs, librosa, soundfile, lameenc)
#   uv sync --extra gpu      # + PyTorch for GPU-accelerated Demucs

[project]
name = "strudel-music-pipeline"
version = "0.1.0"
description = "Optional Python ML pipeline for strudel-music (Demucs stem separation, librosa analysis)"
requires-python = ">=3.10"
license = "MIT"

dependencies = [
    "demucs==4.0.1",
    "librosa==0.11.0",
    "soundfile==0.13.1",
    "lameenc==1.8.1",
]

[project.optional-dependencies]
gpu = [
    "torch==2.10.0",
    "numpy==2.4.2",
    "scipy==1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
